Add characters and format

--- a/p02-data-binding/src/characters/characters.style.css
+++ b/p02-data-binding/src/characters/characters.style.css
@@ -5,6 +5,11 @@
   height: 700px;
   overflow: auto;
 }
+.characters {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start; 
+}
 
 .houses button {
   width: 130px;
