add darkorange border and font

--- a/p03-form-validations/src/Shared/components/Button/Button.styles.css
+++ b/p03-form-validations/src/Shared/components/Button/Button.styles.css
@@ -13,3 +13,8 @@ button:hover {
   background-color: #3e3e3e;
   cursor: pointer;
 }
+
+button.clear {
+  color: darkorange;
+  border-color: darkorange;
+} 
