Exercise 03, Jose Garcia

--- a/p03-form-validations/src/Shared/components/Button/Button.styles.css
+++ b/p03-form-validations/src/Shared/components/Button/Button.styles.css
@@ -9,7 +9,12 @@ button {
   font-family: Inter;
 }
 
-button:hover {
+button:enabled:hover {
   background-color: #3e3e3e;
   cursor: pointer;
+}
+
+.clear-button {
+  color: darkorange;
+  border-color: darkorange;
 }
